2012-04-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/52893
	Backport from trunk
	* gfortran.dg/function_optimize_11.f90:  New test.

2012-04-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/52668
	Backport from trunk
	* gfortran.dg/use_only_6.f90: New test.

2012-04-06  Mike Stump  <mikestump@comcast.net>

	PR testsuite/50722
	* gcc.dg/pr49994-3.c: Use -w to squelch non-portable warnings.

2012-04-05  Jason Merrill  <jason@redhat.com>

	PR c++/52596
	* g++.dg/template/qualified-id5.C: New.

2012-04-03  Jason Merrill  <jason@redhat.com>

	PR c++/52796
	* g++.dg/cpp0x/variadic-value1.C: New.

2012-04-03  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2012-03-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52406
	* gcc.dg/torture/pr52406.c: New testcase.

2012-04-03  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2012-03-15  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52580
	* gfortran.dg/vect/pr52580.f: New testcase.

2012-04-03  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2012-03-06  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52493
	* gcc.dg/torture/pr52493.c: New testcase.

	2012-03-23  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52678
	* gfortran.dg/pr52678.f: New testcase.

	2012-03-26  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52701
	* gfortran.dg/pr52701.f90: New testcase.

	2012-03-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52754
	* gcc.target/i386/pr52754.c: New testcase.

2012-04-03  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/52835
	* gfortran.dg/pr52835.f90: New test.

2012-03-31  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/controlled6.adb: New test.
	* gnat.dg/controlled6_pkg.ads: New helper.
	* gnat.dg/controlled6_pkg-iterators.ad[sb]: Likewise.

2012-03-29  Meador Inge  <meadori@codesourcery.com>

	PR c++/52672
	* g++.dg/cpp0x/constexpr-52672.C: New testcase.
